--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,250 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    color: #181818;
+    margin: 0;
+    padding: 0;
 }
+h1, h2. h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
+p {
+    line-height: 150%;
+    font-weight: 300;
+}
+img {
+    width: 100%;
+    position: relative;
+}
+a {
+    text-decoration: none;
+}
+.container {
+    display: block;
+    max-width: 1140px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+.row {
+    display: flex;
+    align-items: center;
+    margin: 0 -15px;
+}
+.col, col-1, .col-2, .col-3, .col-4 {
+    padding: 0 15px;
+}
+.col-1 {
+    width: 100%;
+}
+.col-2 {
+    width: 50%;
+}
+.col-3 {
+    width: 33.3%;
+}
+.col-4 {
+    width: 25%;
+}
+input {
+    border: 0;
+    border-radius: 4px;
+    padding: 10px 10px;
+    color: #aaa;
+    outline: none;
+}
+.btn {
+    border: 0;
+    border-radius: 4px;
+    padding: 10px 20px;
+    outline: none;
+}
+.btn-primary {
+    color: #fff;
+    background-color: #0073BC;
+}
+.btn-primary:hover {
+    background-color: #0584d3;
+}
+
+/* Header */
+header {
+    background-color: #fff;
+}
+header .brand img {
+    width: 228px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+header .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 1px;
+}
+header nav {
+    flex-wrap: nowrap;
+    display: flex;
+}
+header nav ul {
+    position: relative;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+header nav ul li {
+    float: left;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+nav a {
+    display: block;
+    position: relative;
+    color: #222;
+    padding: 10px 0 25px 0;
+    border-bottom: 3px solid #fff;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+}
+nav a.active {
+    border-bottom: 3px solid #0073BC;
+}
+nav a:hover {
+    border-bottom: 3px solid #0073BC;
+    color: #0073BC;
+}
+nav .dropdown-menu {
+    display: none !important;
+}
+nav li.dropdown .dropdown-menu a {
+    padding: 20px;
+    border: 0;
+}
+nav li.dropdown:hover .dropdown-menu {
+    display: block !important;
+    position: absolute;
+    z-index: 101;
+    right: 20px;
+    margin-top: 1px;
+    box-shadow: 0px 4px rgba(0,0,0,0.3);
+}
+nav li.dropdown .dropdown-menu a {
+    padding: 20px;
+    background-color: rgba(0,115,188, 0.8);
+    color: #fff;
+}
+nav li.dropdown .dropdown-menu a:hover {
+    display: block;
+    padding: 20px;
+    background-color: rgba(0,115,188, 1);
+    color: #fff;
+}
+nav a.login {
+    font-size: 1.5rem;
+    padding: 6px 10px 0px 15px;
+    margin-bottom: 10px;
+    border-left: 1px solid #eee;
+    color: #222;
+    border-bottom: 0;
+}
+nav a.login:hover {
+    color: #0073BC;
+    border-bottom: 0;
+}
+.hero {
+    height: 400px;
+    background: url(../img/hero.jpg) no-repeat center center;
+    background-size: cover;
+    text-align: center;
+    position: relative;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    text-shadow: 0px 2px 8px #000;
+}
+.hero::before {
+    content: " ";
+    position: absolute;
+    z-index: 0;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0, 0.7)
+}
+.hero .container {
+    z-index: 100;
+}
+.hero .title {
+    font-size: 4rem;
+    font-weight: 700;
+    letter-spacing: 4px;
+}
+.hero .subtitle {
+    font-size: 1.1rem;
+    font-weight: 300;
+    letter-spacing: 10px;
+}
+
+/* Footer */
+footer {
+    background: #0073BC;
+    padding: 20px 0;
+    color: #fff;
+    border-top: 4px solid #75C887;
+}
+footer .row {
+    justify-content: space-between;
+    position: relative;
+    width: 100%;
+}
+footer .row .social a {
+    color: #fff;
+    font-size: 2.5rem;
+}
+footer .row .social a:hover {
+    animation-duration: .6s;
+    animation-name: fadeAndScale;
+}
+
+/* Home Page */
+.newsletter {
+    background-color: #75C887;
+    color: #fff;
+}
+.newsletter-form {
+    display: flex;
+    flex-wrap: nowrap;
+}
+.newsletter-form input {
+    border-radius: 0;
+    margin-right: 1px;
+    max-width: 100px;
+}
+.newsletter-form input:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.newsletter-form button {
+    border-radius: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.newsletter p {
+    max-width: 420px;
+}
+
+/* Animations */
+@keyframes fadeAndScale {
+    from {
+        opacity: 0;
+        transform: scale(.9, .9);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1, 1);
+    }
+}
+
+
