Fix newsletter section css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ section {
 input {
     border: 0;
     border-radius: 4px;
-    padding: 10px 10px;
+    padding: 15px 15px;
     color: #aaa;
     outline: none;
 }
@@ -268,6 +268,9 @@ footer .row .social a:hover {
     color: #fff;
     margin-top: 30px;
 }
+.newsletter .row {
+    justify-content: space-between;
+}
 .newsletter-form {
     display: flex;
     flex-wrap: nowrap;
@@ -275,7 +278,7 @@ footer .row .social a:hover {
 .newsletter-form input {
     border-radius: 0;
     border-right: 1px solid #eee;
-    max-width: 100px;
+    max-width: 140px;
 }
 .newsletter-form input:first-child {
     border-top-left-radius: 4px;
@@ -287,7 +290,7 @@ footer .row .social a:hover {
     border-bottom-right-radius: 4px;
 }
 .newsletter p {
-    max-width: 420px;
+    max-width: 500px;
 }
 
 /* Place Image / Banner */
