--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,10 @@ input {
     color: #aaa;
     outline: none;
 }
+.link {
+    color: #0073BC;
+    text-decoration: underline;
+}
 .btn {
     border: 0;
     border-radius: 4px;
@@ -281,7 +285,7 @@ nav li.dropdown:hover .dropdown-menu {
     z-index: 101;
     right: 20px;
     margin-top: 1px;
-    box-shadow: 0px 4px rgba(0,0,0,0.3);
+    box-shadow: 0px 4px 6px rgba(0,0,0,0.3);
 }
 nav li.dropdown .dropdown-menu a {
     padding: 20px;
@@ -460,7 +464,54 @@ footer .row .social a:hover {
     box-shadow: 0 10px 15px rgba(0,0,0, 0.2);
 }
 
-
+/* Services Details */
+.service-detail {
+    display: flex;
+    justify-content: space-between;
+}
+.service-detail .content {
+    flex: 2;
+}
+.service-detail .image {
+    flex: 1;
+}
+.service-detail .image img {
+    width: 100%;
+    display: block;
+    box-shadow: 0px 4px 15px rgba(0,0,0,0.3);
+}
+.service-detail .badget {
+    padding: 8px 15px;
+    background-color: #eee;
+    border-radius: 4px;
+    margin-top: 5px;
+}
+.service-detail .content h2,
+.service-reviews h2 {
+    color: #0073BC;
+    font-weight: bold;
+}
+.service-detail h4 {
+    font-weight: bold;
+    margin: 50px 0 0 0;
+}
+.service-reviews{
+    margin-top: 60px;
+}
+.service-reviews .row {
+    display: flex;
+    align-items: flex-start;
+}
+.service-reviews .quotes {
+    width: 80px;
+    border-radius: 0;
+    margin-right: 30px;
+    margin-top: 20px;
+}
+.service-reviews p {
+    text-align: justify;
+    line-height: 120%;
+}
 
 /* Animations */
 @keyframes fadeAndScale {
