--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,6 +549,18 @@ footer .row .social a:hover {
 .newsletter p {
     max-width: 500px;
 }
+/* About Page */
+#about-page #history p,
+#about-page #weather p,
+#about-page #map p {
+    text-align: justify;
+}
+#about-page #weather h3 {
+    margin: 0;
+}
+#about-page #weather .row .col-4 p {
+    text-align: center;
+}
 
 /* Place Page */
 #places-page .bg-light {
@@ -820,6 +832,33 @@ footer .row .social a:hover {
     }
     .newsletter-form input {
         width: 100%;
+    }
+
+    /* About page */
+    .page-with-sidebar {
+        flex-wrap: wrap;
+        padding: 0;
+        margin: 0;
+        display: block;
+    }
+    .page-sidebar {
+        display: none;
+    }
+    #weather .row {
+        flex-wrap: wrap;
+    }
+    #weather .row .col-4 {
+        width: 50%;
+    }
+    #weather h3 {
+        margin: 0;
+    }
+    #weather img {
+        max-width: 120px;
+    }
+    #weather .row .col-4 p {
+        font-size: 0.9rem;
+        line-height: 120%;
     }
 
     /* Places pages */
