--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,6 +286,7 @@ header .brand img {
     width: 228px;
     margin-top: 5px;
     margin-bottom: 5px;
+    border-radius: 0;
 }
 header .navbar {
     display: flex;
@@ -359,6 +360,9 @@ nav a.btn-menu {
     border-left: 1px solid #eee;
     color: #222;
     border-bottom: 0;
+}
+nav a.btn-menu {
+    display: none;
 }
 nav a.login:hover {
     color: #0073BC;
@@ -686,9 +690,6 @@ footer .row .social a:hover {
         padding: 20px;
         margin: 0;
     }
-    nav a.btn-menu {
-        padding-right: 10px;
-    }
 }
 
 @media only screen and (max-width: 767px) {
@@ -706,6 +707,10 @@ footer .row .social a:hover {
     }
 
     /* Navbar */
+    nav a.btn-menu {
+        padding-right: 10px;
+        display: inline;
+    }
     header .brand img {
         width: 140px;
     }
@@ -748,7 +753,7 @@ footer .row .social a:hover {
         background-size: auto 100% !important;
     }
     .page-header h1 {
-        padding: 10px;
+        padding: 20px 0;
         margin: 0;
         text-align: left;
         font-size: 1.8rem;    
